--- a/tester/src/main/resources/static/app/components/question/questions.html
+++ b/tester/src/main/resources/static/app/components/question/questions.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="highlightcolorBlack">
 				<a ng-click="beforeEditQuestion(question.id)" class="button">Edit</a>
-				<a ng-click="removeCategory(category.id)" class="button">Remove</a>
+				<a ng-click="removeQuestion(question.id)" class="button">Remove</a>
 			</div>
 		</div>
 </div>
