--- a/tester/src/main/resources/static/app/components/test/tests.html
+++ b/tester/src/main/resources/static/app/components/test/tests.html
@@ -1,3 +1,5 @@
+
+<div id="pdf">
 <h2>
 	Tests
 </h2>
@@ -36,6 +38,13 @@
 		
 	</tbody>
 </table>
+
+</div>
+
+
+<div class="highlightcolorBlack">
+	<a ng-click="popUpPdf()"class="button">Pdf</a>
+</div>
 
 
 <div class="highlightcolorBlack">
