security na frontu

--- a/tester/src/main/resources/static/app/components/core/login.html
+++ b/tester/src/main/resources/static/app/components/core/login.html
@@ -4,7 +4,7 @@
 	<fieldset>
 
 		<label>Username</label>
-		<input ng-model="user.name" name="name">
+		<input ng-model="user.username" name="name">
 		
 		<br />
 		<label>Password</label>
