--- a/tester/src/main/resources/static/app/components/question/questions.html
+++ b/tester/src/main/resources/static/app/components/question/questions.html
@@ -32,6 +32,6 @@
 </div>
 
 
-<div class="highlightcolorBlack">
+<div class="highlightcolorBlack"  ng-show= "auth.isAdmin()>
 	<a ui-sref='main.addQuestion' class="button">Add new question</a>
 </div>
